# CPP-to-ASM-translator

./: CMakeLists.txt  README.md
examples/example_1/res/: alphabet.txt  operatorsOperandsNumber.txt  program.txt
examples/example_1/results/: assembler.txt  postfix.txt
examples/example_2/res/: keyWords.txt
examples/example_2/results/: assembler.txt  postfix.txt
examples/example_3/res/: operators.txt  priorities.txt  program.txt  separators.txt
examples/example_3/results/: errors.txt
examples/example_4/res/: parseTable.txt  program.txt
examples/example_4/results/: errors.txt
res/: program.txt
src/: AssemblerGenerator.cpp  AssemblerGenerator.h  DynamicTable.h  Enums.h  Identifier.cpp  Identifier.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  Literal.cpp  Literal.h  ParseTable.cpp  ParseTable.h  ParseTableElement.cpp  ParseTableElement.h  Parser.cpp  Parser.h  SourceFunction.cpp  SourceFunction.h  StaticTable.h  TStaticTable.h  TTable.h  Table.h  TableElement.h  TemplateDynamicTable.h  TemplateStaticTable.h  Token.cpp  Token.h  TokenTable.cpp  TokenTable.h  Translator.cpp  Translator.h  main.cpp
